--- a/index.html
+++ b/index.html
@@ -3,34 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heladería</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Heladería Deliciosa</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            color: #ff6f61;
+        }
+        p {
+            font-size: 1.2em;
+            color: #333;
+        }
+        .sabores {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 30px;
+        }
+        .sabor {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Bienvenidos a Nuestra Heladería</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#sabores">Sabores</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-        </ul>
-    </nav>
-    <section id="inicio">
-        <h2>Inicio</h2>
-        <p>Disfruta de los mejores helados artesanales en nuestra heladería.</p>
-    </section>
-    <section id="sabores">
-        <h2>Sabores</h2>
-        <p>Tenemos una gran variedad de sabores para todos los gustos.</p>
-    </section>
-    <section id="contacto">
-        <h2>Contacto</h2>
-        <p>Visítanos en nuestra tienda o contáctanos a través de nuestras redes sociales.</p>
-    </section>
-    <footer>
-        <p>&copy; 2023 Heladería. Todos los derechos reservados.</p>
-    </footer>
+    <h1>Bienvenidos a Heladería Deliciosa</h1>
+    <p>¡Los mejores helados de la ciudad!</p>
+    <div class="sabores">
+        <div class="sabor">
+            <h2>Vainilla</h2>
+            <p>Clásico y cremoso.</p>
+        </div>
+        <div class="sabor">
+            <h2>Chocolate</h2>
+            <p>Rico e intenso.</p>
+        </div>
+        <div class="sabor">
+            <h2>Fresa</h2>
+            <p>Fresco y dulce.</p>
+        </div>
+    </div>
 </body>
-</html></section>
+</html>
